cutenews-twitter (0.1.0) unstable; urgency=low

  * Add support for article requests.
  * Sort tweets by date in descending order.
  * Check if query starts with # before stripping for hashtag query.

 -- Stuart Howarth <showarth@marxoft.co.uk>  Mon, 22 Oct 2017 02:11:32 +0100

cutenews-twitter (0.0.1) unstable; urgency=low

  * Initial Release.

 -- Stuart Howarth <showarth@marxoft.co.uk>  Fri, 13 Oct 2017 19:05:12 +0100